cleaning up what shows when

--- a/index.html
+++ b/index.html
@@ -57,89 +57,96 @@
 	<div class="wrapper">
 		<section class="first-section">
       <div class="problem-statement-holder">
-      <p class="problem-statement type-a h1">
-        <span class="the-verb the-verb-optional reset"></span> 
-        <span class="the-possessive-optional">your</span>
-        <span class="the-adjective-one reset"></span>
-        <span class="the-adjective-direction reset"></span>
-        <span class="the-problem-part reset"></span>
-        <span class="the-emphasis-a">just</span>
-        <span class="the-emphasis">too</span>
-        <span class="the-problem reset"></span>?
-        <span class="the-emotions reset"></span>
-      </p>
-      <p class="problem-statement type-b h1">
-        <span class="the-suggestion">Tired of</span> 
-        <span class="the-possessive-optional">your</span>
-        <span class="the-adjective-one reset"></span>
-        <span class="the-problem reset"></span>
-        <span class="the-adjective-direction reset"></span>
-        <span class="the-problem-part reset"></span>?
-        <span class="the-emotions reset"></span>
-      </p>
-      <p class="problem-statement type-c h1">
-        <span class="the-verb the-verb-optional reset"></span> 
-        <span class="the-possessive-optional">your</span>
-        <span class="the-adjective-one reset"></span>
-        <span class="the-problem reset"></span>
-        <span class="the-adjective-direction reset"></span>
-        <span class="the-problem-part reset"></span>
-        <span class="the-result reset"></span>?
-        <span class="the-emotions reset"></span>
-      </p>
-      <p class="problem-statement type-d h1">
-        <span class="intro reset"></span>
-        <span class="could reset"></span>
-        <span class="the-verb reset"></span> 
-        <span class="the-possessive">your</span>
-        <span class="the-adjective-one reset"></span>
-        <span class="the-problem reset"></span>
-        <span class="the-adjective-direction reset"></span>
-        <span class="the-problem-part reset"></span>
-        <span class="be reset reset"></span>
-        <span class="the-result reset"></span>?
-        <span class="the-emotions reset"></span>
-      </p>
-      <p class="problem-statement type-e h1">
-        <span class="intro reset"></span>
-        <span class="the-verb reset"></span> 
-        <span class="the-possessive">your</span>
-        <span class="the-adjective-one reset"></span>
-        <span class="the-adjective-direction reset"></span>
-        <span class="the-problem-part reset"></span>
-        <span class="the-emphasis-a">just</span>
-        <span class="the-emphasis">too</span>
-        <span class="the-problem reset"></span>?
-        <span class="the-emotions reset"></span>
-      </p>
-    </div>
-  </section>
+        <p class="problem-statement type-a h1">
+          <span class="the-verb the-verb-optional reset"></span> 
+          <span class="the-possessive-optional">your</span>
+          <span class="the-adjective-one reset"></span>
+          <span class="the-adjective-direction reset"></span>
+          <span class="the-problem-part reset"></span>
+          <span class="the-emphasis-a">just</span>
+          <span class="the-emphasis">too</span>
+          <span class="the-problem reset"></span>?
+          <span class="the-emotions reset"></span>
+        </p>
+        <p class="problem-statement type-b h1">
+          <span class="the-suggestion">Tired of</span> 
+          <span class="the-possessive-optional">your</span>
+          <span class="the-adjective-one reset"></span>
+          <span class="the-problem reset"></span>
+          <span class="the-adjective-direction reset"></span>
+          <span class="the-problem-part reset"></span>?
+          <span class="the-emotions reset"></span>
+        </p>
+        <p class="problem-statement type-c h1">
+          <span class="the-verb the-verb-optional reset"></span> 
+          <span class="the-possessive-optional">your</span>
+          <span class="the-adjective-one reset"></span>
+          <span class="the-problem reset"></span>
+          <span class="the-adjective-direction reset"></span>
+          <span class="the-problem-part reset"></span>
+          <span class="the-result reset"></span>?
+          <span class="the-emotions reset"></span>
+        </p>
+        <p class="problem-statement type-d h1">
+          <span class="intro reset"></span>
+          <span class="could reset"></span>
+          <span class="the-verb reset"></span> 
+          <span class="the-possessive">your</span>
+          <span class="the-adjective-one reset"></span>
+          <span class="the-problem reset"></span>
+          <span class="the-adjective-direction reset"></span>
+          <span class="the-problem-part reset"></span>
+          <span class="be reset reset"></span>
+          <span class="the-result reset"></span>?
+          <span class="the-emotions reset"></span>
+        </p>
+        <p class="problem-statement type-e h1">
+          <span class="intro reset"></span>
+          <span class="the-verb reset"></span> 
+          <span class="the-possessive">your</span>
+          <span class="the-adjective-one reset"></span>
+          <span class="the-adjective-direction reset"></span>
+          <span class="the-problem-part reset"></span>
+          <span class="the-emphasis-a">just</span>
+          <span class="the-emphasis">too</span>
+          <span class="the-problem reset"></span>?
+          <span class="the-emotions reset"></span>
+        </p>
+      </div>
 
-  <section>
-    <div class="solution-statement-holder">
-      <p class="solution-statement h1 selected">
-        <br/>
-        <span class="solution-intro">Then you need our</span>
-        <span class="the-solution-adjective-one reset"></span>
-        <span class="the-solution-adjective-two reset"></span>
-        <span class="the-problem-part-singular reset"></span>
-        <span class="the-solution-noun reset"></span>!
-      </p>
 
-      <p class="follow-up">
-        <br/>
-        <span class="the-follow-up"></span>
-      </p>
-		</section>
+      <div class="solution-statement-holder">
+        <p class="solution-statement h1 selected">
+          <br/>
+          <span class="solution-intro">Then you need our</span>
+          <span class="the-solution-adjective-one reset"></span>
+          <span class="the-solution-adjective-two reset"></span>
+          <span class="the-problem-part-singular reset"></span>
+          <span class="the-solution-noun reset"></span>!
+        </p>
 
-    <section class="buttons">
+        <p class="follow-up">
+          <br/>
+          <span class="the-follow-up"></span>
+        </p>
+      </div>
+
+    </section>
+
+    <section class="problem-buttons">
       <div class="button-set">
         <button id="no">Nope</button>
         <button id="yes">Yeah, probably</button>
       </div>
     </section>
 
-  </div>
+    <section class="again-buttons">
+      <div class="button-set">
+        <button id="share">Share this!</button>
+        <a class="reset-button" href="#">Start over</a>
+      </div>
+    </section>
+
 	</div> <!-- end wrapper -->
 
 	<section class="footer">
@@ -157,7 +164,8 @@
   <script>
 
     $(document).ready(function() {
-      whatsMyProblem();
+      whatsMyProblem()
+      $('.problem-buttons').delay(400).fadeIn();
     });
 
     $('#no').click(function() {
@@ -167,9 +175,17 @@
     });
 
     $('#yes').click(function() {
+      $('.problem-buttons').fadeOut();
       $('.problem-statement-holder').fadeOut(function() {
         whatsMySolution();
       });
+    });
+
+    $('.reset-button').click(function() {
+      $('.again-buttons').hide();
+      $('.problem-buttons').show();
+      $('.solution-statement-holder').hide();
+      whatsMyProblem();
     });
 
     
