cleaning up the html

--- a/index.html
+++ b/index.html
@@ -56,117 +56,173 @@
 
 	<div class="wrapper">
 		<section class="main-section">
+
+      <!-- *****************************
+                  PROBLEMS
+      ****************************** -->
+
+      <!-- Let's figure out what's wrong with you -->
       <div class="problem-statement-holder">
-        <p class="problem-statement type-a h1">
-          <span class="the-verb the-verb-optional reset"></span> 
-          <span class="the-possessive-optional">your</span>
-          <span class="the-adjective-one reset"></span>
-          <span class="the-adjective-direction reset"></span>
-          <span class="the-problem-part reset"></span>
-          <span class="the-emphasis-a">just</span>
-          <span class="the-emphasis">too</span>
-          <span class="the-problem reset"></span>?
-          <span class="the-emotions reset"></span>
-        </p>
-        <p class="problem-statement type-b h1">
-          <span class="the-suggestion">Tired of</span> 
-          <span class="the-possessive-optional">your</span>
-          <span class="the-adjective-one reset"></span>
-          <span class="the-problem reset"></span>
-          <span class="the-adjective-direction reset"></span>
-          <span class="the-problem-part reset"></span>?
-          <span class="the-emotions reset"></span>
-        </p>
-        <p class="problem-statement type-c h1">
-          <span class="the-verb the-verb-optional reset"></span> 
-          <span class="the-possessive-optional">your</span>
-          <span class="the-adjective-one reset"></span>
-          <span class="the-problem reset"></span>
-          <span class="the-adjective-direction reset"></span>
-          <span class="the-problem-part reset"></span>
-          <span class="the-result reset"></span>?
-          <span class="the-emotions reset"></span>
-        </p>
-        <p class="problem-statement type-d h1">
-          <span class="intro reset"></span>
-          <span class="could reset"></span>
-          <span class="the-verb reset"></span> 
-          <span class="the-possessive">your</span>
-          <span class="the-adjective-one reset"></span>
-          <span class="the-problem reset"></span>
-          <span class="the-adjective-direction reset"></span>
-          <span class="the-problem-part reset"></span>
-          <span class="be reset reset"></span>
-          <span class="the-result reset"></span>?
-          <span class="the-emotions reset"></span>
-        </p>
-        <p class="problem-statement type-e h1">
-          <span class="intro reset"></span>
-          <span class="the-verb reset"></span> 
-          <span class="the-possessive">your</span>
-          <span class="the-adjective-one reset"></span>
-          <span class="the-adjective-direction reset"></span>
-          <span class="the-problem-part reset"></span>
-          <span class="the-emphasis-a">just</span>
-          <span class="the-emphasis">too</span>
-          <span class="the-problem reset"></span>?
-          <span class="the-emotions reset"></span>
-        </p>
-      </div>
+
+        <!-- Our main statement format: Is your part too gross? -->
+        <div class="problem-statement type-a">
+          <p class="h1">
+            <span class="the-verb the-verb-optional reset"></span> 
+            <span class="the-possessive-optional">your</span>
+            <span class="the-adjective-one reset"></span>
+            <span class="the-adjective-direction reset"></span>
+            <span class="the-problem-part reset"></span>
+            <span class="the-emphasis-a">just</span>
+            <span class="the-emphasis">too</span>
+            <span class="the-problem reset"></span>?
+            <span class="the-emotions reset"></span>
+          </p>
+        </div>
+
+        <!-- Variations:
+
+        Tired of your gross part? -->
+        <div class="problem-statement type-b">
+          <p class="h1">
+            <span class="the-suggestion">Tired of</span> 
+            <span class="the-possessive-optional">your</span>
+            <span class="the-adjective-one reset"></span>
+            <span class="the-problem reset"></span>
+            <span class="the-adjective-direction reset"></span>
+            <span class="the-problem-part reset"></span>?
+            <span class="the-emotions reset"></span>
+          </p>
+        </div>
+
+        <!-- Part too gross? :-( -->
+        <div class="problem-statement type-c">
+          <p class="h1">
+            <span class="the-verb the-verb-optional reset"></span> 
+            <span class="the-possessive-optional">your</span>
+            <span class="the-adjective-one reset"></span>
+            <span class="the-problem reset"></span>
+            <span class="the-adjective-direction reset"></span>
+            <span class="the-problem-part reset"></span>
+            <span class="the-result reset"></span>?
+            <span class="the-emotions reset"></span>
+          </p>
+        </div>
+
+        <!-- Let's face it: could your part be too gross? -->
+        <div class="problem-statement type-d">
+          <p>
+            <span class="intro reset"></span>
+          </p>
+          <p class="h1">
+            <span class="intro reset"></span>
+            <span class="could reset"></span>
+            <span class="the-verb reset"></span> 
+            <span class="the-possessive">your</span>
+            <span class="the-adjective-one reset"></span>
+            <span class="the-problem reset"></span>
+            <span class="the-adjective-direction reset"></span>
+            <span class="the-problem-part reset"></span>
+            <span class="be reset reset"></span>
+            <span class="the-result reset"></span>?
+            <span class="the-emotions reset"></span>
+          </p>
+        </div>
+
+        <!-- Time for some hard truths: is your part just too gross? -->
+        <div class="problem-statement type-e">
+          <p>
+            <span class="intro reset"></span>
+          </p>
+          <p class="h1">
+            <span class="the-verb reset"></span> 
+            <span class="the-possessive">your</span>
+            <span class="the-adjective-one reset"></span>
+            <span class="the-adjective-direction reset"></span>
+            <span class="the-problem-part reset"></span>
+            <span class="the-emphasis-a">just</span>
+            <span class="the-emphasis">too</span>
+            <span class="the-problem reset"></span>?
+            <span class="the-emotions reset"></span>
+          </p>
+        </div>
+
+      </div> <!-- problem statement holder -->
 
 
+      <!-- *****************************
+               CONSIDERATIONS
+      ****************************** -->
+
+      <!-- I will make you feel worse -->
       <div class="consideration-holder">
-        <h1 class="the-considerations">Really?</h1>
+        <p class="h1">
+          <span class="the-considerations">Really?</span>
+        </p>
+
         <div class="evidence-card">
           <p class="the-evidence">
-          According to one study,<span class="superscript">*</span>
-          <strong><span class="percent">8</span>%</strong>
-          of people say that on a first date, the first thing they notice is their partner's
-          <span class="the-problem-part reset"></span>.
+            According to one study,<span class="superscript">*</span>
+            <strong><span class="percent">8</span>%</strong>
+            of people say that on a first date, the first thing they notice is their partner's
+            <span class="the-problem-part reset"></span>.
           </p>
         <p class="fine-print">*not peer reviewed.</p>
-      </div>
+
+      </div> <!-- consideration holder -->
 
 
+      <!-- *****************************
+                  SOLUTIONS
+      ****************************** -->
+
+      <!-- Nothing that capitalism can't solve, yo! -->
       <div class="solution-statement-holder">
-        <p class="solution-statement h1 selected">
-          <br/>
-          <span class="solution-intro">Then you need our</span>
-          <span class="the-solution-adjective-one reset"></span>
-          <span class="the-solution-adjective-two reset"></span>
-          <span class="the-problem-part-singular reset"></span>
-          <span class="the-solution-noun reset"></span>!
-        </p>
 
-        <p class="follow-up">
-          <br/>
-          <span class="the-follow-up"></span>
-        </p>
-      </div>
+        <div class="solution-statement selected">
+          <p>
+            <span class="solution-intro">Then you need our</span>
+          </p>
+          <p class="h1">
+            <span class="solution-intro">Then you need our</span>
+            <span class="the-solution-adjective-one reset"></span>
+            <span class="the-solution-adjective-two reset"></span>
+            <span class="the-problem-part-singular reset"></span>
+            <span class="the-solution-noun reset"></span>!
+          </p>
+
+        <div class="follow-up">
+          <p>
+            <span class="the-follow-up"></span>
+          </p>
+        </div>
+      </div> <!-- solution holder -->
 
 
-    </section>
+    </section> <!-- main section -->
 
-    <section class="buttons problem-buttons">
-      <div class="button-set">
+
+    <!-- *****************************
+                CONTROLS
+    ****************************** -->
+    
+    <section class="buttons">
+
+      <div class="button-set problem-buttons">
         <button class="no">Nope</button>
         <button class="yes">Yeah, probably</button>
       </div>
-    </section>
 
-    <section class="buttons consideration-buttons">
-      <div class="button-set">
+      <div class="button-set consideration-buttons">
         <button class="no">Nope</button>
         <button class="yes">Okay, good point</button>
       </div>
-    </section>
 
-    <section class="buttons again-buttons">
-      <div class="button-set">
+      <div class="button-set again-buttons">
         <button class="share">Share this!</button>
         <a class="reset-button" href="#">Start over</a>
       </div>
-    </section>
+
+    </section> <!-- buttons section-->
 
 	</div> <!-- end wrapper -->
 
