--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       ****************************** -->
 
       <!-- Let's figure out what's wrong with you -->
-      <div class="problem-statement-holder">
+      <div class="problem-element problem-statement-holder">
 
         <!-- Our main statement format: Is your part too gross? -->
         <div class="problem-statement type-a">
@@ -154,7 +154,7 @@
       ****************************** -->
 
       <!-- I will make you feel worse -->
-      <div class="consideration-holder">
+      <div class="consideration-element consideration-holder">
         <p class="h1">
           <span class="the-considerations">Really?</span>
         </p>
@@ -176,7 +176,7 @@
       ****************************** -->
 
       <!-- Nothing that capitalism can't solve, yo! -->
-      <div class="solution-statement-holder">
+      <div class="solution-element solution-statement-holder">
 
         <div class="solution-statement selected">
           <p>
@@ -204,20 +204,20 @@
     <!-- *****************************
                 CONTROLS
     ****************************** -->
-    
+
     <section class="buttons">
 
-      <div class="button-set problem-buttons">
+      <div class="button-set problem-element problem-buttons">
         <button class="no">Nope</button>
         <button class="yes">Yeah, probably</button>
       </div>
 
-      <div class="button-set consideration-buttons">
+      <div class="button-set consideration-elemenet consideration-buttons">
         <button class="no">Nope</button>
         <button class="yes">Okay, good point</button>
       </div>
 
-      <div class="button-set again-buttons">
+      <div class="button-set solution-element again-buttons">
         <button class="share">Share this!</button>
         <a class="reset-button" href="#">Start over</a>
       </div>
@@ -249,8 +249,11 @@
     });
 
     $('.no').click(function() {
+      // how many times has the user hit nope?
       count++;
+      
       if (count == 5) {
+        // hit 'em with some guilt
         considerations();
       } else if (count == 20) {
           console.log('we hit 20');
@@ -263,23 +266,20 @@
 
     $('.yes').click(function() {
       if ($('.problem-buttons').visible()) {
-        $('.problem-buttons').fadeOut();
-        $('.problem-statement-holder').fadeOut(function() {
-        whatsMySolution();
+        $('.problem-element').fadeOut(function() {
+          whatsMySolution();
         });
       } else if ($('.considerations-buttons').visible()) {
-        $('.consideration-buttons').fadeOut();
-        console.log("faded it");
-        $('.consideration-holder').fadeOut(function() {
-        whatsMySolution();
+        $('.consideration-element').fadeOut(function() {
+          whatsMySolution();
         });
       }
     });
 
     $('.reset-button').click(function() {
-      $('.again-buttons').hide();
-      $('.problem-buttons').show();
-      $('.solution-statement-holder').hide();
+      $('.again-element').hide();
+      $('.problem-element').show();
+      $('.solution-element').hide();
       whatsMyProblem();
     });
 
