working on styles for the considerations page

--- a/index.html
+++ b/index.html
@@ -160,16 +160,17 @@
 
         <div class="evidence-card">
           <p class="the-evidence">
+            <span class="caption-label">Check the science</span>
             According to one study,<span class="superscript">*</span>
 
             <span class="evidence-span evidence-a">
               <strong><span class="percent">8</span>%</strong>
-              of people say that when talking to someone <span class="evidence-a-detail">on a first date</span>, one of the <strong>first things</strong> they notice is that person's 
+              of people agree: when meeting someone <span class="evidence-a-detail">on a first date</span>, one of the <strong>first things</strong> they notice is the other person&rsquo;s
               <span class="the-problem-part reset"></span>.
             </span>
 
             <span class="evidence-span evidence-b">
-              people with <span class="the-problem"></span> <span class="the-problem-part reset"></span> are <span class="percent">8</span>% <span class="evidence-b-detail">less likely to be offered jobs</span> than people without.</span>
+              people with undesirable <span class="the-problem-part-plural reset"></span> are <strong><span class="percent">8</span>%</strong> <span class="evidence-b-detail">less likely to be offered jobs</span>.</span>
             </p>
           </p>
         </div>
